# cccompression

./: CMakeLists.txt  README.md
.github/workflows/: analyze.yaml  cppcheck.yaml  documentation.yaml
cccompression/: main.cpp
cccompression/algorithms/: frequency_table.cpp  frequency_table.hpp  huffman_tree.hpp
